src/main/java/syntactic/test/passing/returnCustomStruct.ru
struct A{}
impl A{
    fn a()->A{
    }
}
start{}