src/main/java/syntactic/test/failing/missingFnKeyword.ru
impl Hola {
    st capo() -> void {}
}